<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_client"
        android:icon="@drawable/ic_add_black_24dp"
        android:title="Add Client"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_sync_client"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="Sync Clients"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="Settings"
        app:showAsAction="ifRoom" />
</menu>